# IRIS

./: CMakeLists.txt
app/: build_graph.cc  run_planar_batch.sh
include/: crisp_planner.h  drone_planner.h  planar_environment.h  planar_planner.h  planar_robot.h
include/ompl/: rrg.h
learning/: check_image.py  check_pb.py  inference_example.cpp  load.py  losses.py  models.py  plot_coverage.py  plot_path_images.py  retrain.py  save_model.py  test_self_coverage.py  train.py  train_VAE.py
src/: CMakeLists.txt  planar_environment.cc  planar_planner.cc  planar_robot.cc
src/ompl/: CMakeLists.txt  rrg.cc
